apps/overlays/mbk/beszel-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: beszel-agent
spec:
  template:
    spec:
      containers:
        - name: beszel-agent
