apps/overlays/mbk/service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
  annotations:
    gethomepage.dev/href: https://speed.mbk.excloo.dev
    gethomepage.dev/siteMonitor: https://speed.mbk.excloo.dev
