apps/overlays/mbk/beszel-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beszel
  namespace: beszel
  annotations:
    gethomepage.dev/description: Resource Monitoring Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://beszel.mbk.excloo.dev
    gethomepage.dev/icon: beszel
    gethomepage.dev/name: Beszel
    gethomepage.dev/siteMonitor: https://beszel.mbk.excloo.dev
  labels:
    app.kubernetes.io/name: beszel
spec:
  hostnames:
    - beszel.mbk.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: beszel
          port: 8090
