apps/overlays/mbk/bichon-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bichon
  namespace: bichon
  annotations:
    gethomepage.dev/description: Email Archive
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://bichon.excloo.com
    gethomepage.dev/icon: mdi-email-search-outline
    gethomepage.dev/name: Bichon
  labels:
    app.kubernetes.io/name: bichon
spec:
  hostnames:
    - bichon.excloo.com
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: bichon
          port: 15630
