apps/overlays/mbk/byparr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: byparr
  namespace: byparr
  annotations:
    gethomepage.dev/description: Anti-Bot Challenge Solver
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://byparr.mbk.excloo.dev
    gethomepage.dev/icon: byparr
    gethomepage.dev/name: Byparr
    gethomepage.dev/siteMonitor: https://byparr.mbk.excloo.dev
  labels:
    app.kubernetes.io/name: byparr
spec:
  hostnames:
    - byparr.mbk.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: byparr
          port: 8191
