apps/overlays/mbk/comfy-control-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfy-control
  namespace: comfy-control
  annotations:
    gethomepage.dev/description: AI Image and Video Control
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://comfy-control.excloo.com
    gethomepage.dev/icon: comfyui
    gethomepage.dev/name: Comfy Control
  labels:
    app.kubernetes.io/name: comfy-control
spec:
  hostnames:
    - comfy-control.excloo.com
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: comfy-control
          port: 8000
