apps/overlays/mbk/homepage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/description: Application Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://homepage.mbk.excloo.dev
    gethomepage.dev/icon: homepage
    gethomepage.dev/name: Homepage
    gethomepage.dev/siteMonitor: https://homepage.mbk.excloo.dev
  labels:
    app.kubernetes.io/name: homepage
spec:
  hostnames:
    - homepage.mbk.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
