apps/overlays/mbk/immich-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    gethomepage.dev/description: Photo Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/href: https://photos.excloo.com
    gethomepage.dev/icon: immich
    gethomepage.dev/name: Immich
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=immich,app.kubernetes.io/name=server
    gethomepage.dev/siteMonitor: https://photos.excloo.com
  labels:
    app.kubernetes.io/name: immich
    gateway.excloo.dev/public-access: "true"
spec:
  hostnames:
    - photos.excloo.com
  parentRefs:
    - name: public-tunnel
      namespace: networking
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
