apps/overlays/mbk/linkwarden-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    gethomepage.dev/description: Bookmark Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://links.excloo.com
    gethomepage.dev/icon: linkwarden
    gethomepage.dev/name: Linkwarden
  labels:
    app.kubernetes.io/name: linkwarden
    gateway.excloo.dev/public-access: "true"
spec:
  hostnames:
    - links.excloo.com
  parentRefs:
    - name: public-tunnel
      namespace: networking
  rules:
    - backendRefs:
        - name: linkwarden
          port: 3000
