apps/overlays/mbk/miniflux-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    gethomepage.dev/description: Feed Reader
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://reader.excloo.com
    gethomepage.dev/icon: miniflux
    gethomepage.dev/name: Miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  hostnames:
    - reader.excloo.com
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: miniflux
          port: 8080
