apps/overlays/mbk/papra-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra
  namespace: papra
  annotations:
    gethomepage.dev/description: Document Archive
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://papra.excloo.com
    gethomepage.dev/icon: papra
    gethomepage.dev/name: Papra
  labels:
    app.kubernetes.io/name: papra
spec:
  hostnames:
    - papra.excloo.com
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - backendRefs:
        - name: papra
          port: 21221
