apps/overlays/mbk/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  parentRefs:
    - name: private
      namespace: networking
  hostnames:
    - speed.mbk.excloo.dev
  rules:
    - backendRefs:
        - name: openspeedtest
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: openspeedtest-buffering
