apps/overlays/mbk/windmill-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  namespace: windmill
  annotations:
    gethomepage.dev/description: Developer Platform & Workflow Engine · ${HOMEPAGE_LOCATION}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://windmill.mbk.excloo.dev
    gethomepage.dev/icon: windmill
    gethomepage.dev/name: Windmill
    gethomepage.dev/pod-selector: app.kubernetes.io/name=windmill-app
    gethomepage.dev/siteMonitor: https://windmill.mbk.excloo.dev
  labels:
    app.kubernetes.io/name: windmill
spec:
  hostnames:
    - windmill.mbk.excloo.dev
  parentRefs:
    - name: private
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws/
        - path:
            type: PathPrefix
            value: /ws_debug/
      backendRefs:
        - name: windmill-extra
          port: 3000
    - backendRefs:
        - name: windmill-app
          port: 8000
